--- a/app/globals.css
+++ b/app/globals.css
@@ -40,3 +40,17 @@ body {
     text-wrap: balance;
   }
 }
+
+::-webkit-scrollbar {
+  width: 8px; /* Adjust width as needed */
+  height: 8px; /* Adjust height as needed */
+}
+
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: rgba(0, 0, 0, 0.3); /* Adjust color and transparency */
+  border-radius: 10px; /* Adjust roundness as needed */
+}
